# biplab-iitb_practNLPTools

./: .gitignore  pyproject.toml  setup.py  setup.py.old
practnlptools/: tools.py
